--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,8 @@ Typography
   --input-color2: #ffffff;
   --bg-color1: 255, 255, 255;
   --bg-color2: 249, 250, 251;
-  --bg-color3: 14, 15, 20;
+  --bg-color3: 245, 245, 245;
+  --bg-color4: 14, 15, 20;
   --border-color1: rgba(231, 234, 243, 0.7);
   --border-color2: rgba(140, 152, 164, 0.25);
   --shadow1: 0 0.375rem 0.75rem rgba(140, 152, 164, 0.075);
@@ -283,7 +284,7 @@ h2 {
 h3 {
   font-size: 28px;
   margin-bottom: 5px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 @media (max-width: 991px) {
@@ -294,7 +295,7 @@ h3 {
 h4 {
   font-size: 24px;
   margin-bottom: 5px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 @media (max-width: 991px) {
@@ -378,10 +379,10 @@ option {
 
 .form-control,
 .form-select {
-  border-radius: 9999px;
+  border-radius: 10px;
   background-color: var(--input-color);
-  border: 1px solid var(--border-color1);
-  height: 45px;
+  border: 2px solid var(--border-color1);
+  height: 50px;
 }
 .form-control::-moz-placeholder, .form-select::-moz-placeholder {
   color: rgb(var(--body-color));
@@ -393,7 +394,7 @@ option {
 .form-control:focus,
 .form-select:focus {
   box-shadow: none;
-  border: 1px solid rgb(var(--primary-color));
+  border: 2px solid rgb(var(--primary-color));
   background-color: rgb(var(--bg-color1));
 }
 
@@ -468,7 +469,7 @@ intlTelInput section start
 
 .iti--separate-dial-code .iti__selected-flag {
   background-color: rgb(var(--primary-color), 0.1);
-  border-radius: 9999px;
+  border-radius: 10px;
 }
 
 .iti--allow-dropdown .iti__flag-container:hover .iti__selected-flag {
@@ -652,7 +653,7 @@ Breadcrumb start
   margin-bottom: 0;
 }
 .breadcrumb .breadcrumb-item {
-  font-weight: 500;
+  font-weight: 600;
 }
 .breadcrumb .breadcrumb-item + .breadcrumb-item::before {
   content: "\f105";
@@ -756,12 +757,12 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .modal-footer {
-  padding: 16px 30px;
+  padding: 16px 30px 20px;
 }
 
 .modal-header {
   border-bottom: 1px solid var(--border-color2);
-  padding: 12px 16px 5px;
+  padding: 20px 30px;
   border-bottom: none;
 }
 .modal-header .modal-title {
@@ -777,18 +778,176 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 @media (min-width: 576px) {
-  .modal-dialog {
-    max-width: 580px;
-  }
   .modal-body {
-    padding: 0 30px 20px;
+    padding: 20px 30px;
   }
 }
-@media (min-width: 576px) {
-  #lang-currency-modal .modal-content {
-    padding: 20px 40px;
-  }
+.announcement-modal .modal-content {
+  background: linear-gradient(308deg, #cef 14.16%, rgba(238, 239, 255, 0) 49.73%, #feddf5 97.86%), #eef3ff;
 }
+
+.calculator-modal {
+  background-color: rgb(var(--bg-color3), 0.9);
+  background-color: rgb(var(--bg-color4), 0.9);
+}
+.calculator-modal .modal-content {
+  position: relative;
+}
+.calculator-modal .input-box {
+  position: relative;
+}
+.calculator-modal .modal-body .form-control {
+  height: 56px;
+  padding-right: 120px;
+  font-size: 24px;
+}
+
+.input-dropdown-toggle {
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  height: calc(100% - 8px);
+  background-color: rgb(var(--bg-color3));
+  top: 50%;
+  transform: translateY(-50%);
+  right: 4px;
+  padding: 12px;
+  border-radius: 6px;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.input-dropdown-toggle:hover {
+  background-color: rgb(var(--bg-color2));
+}
+.input-dropdown-toggle .img-box {
+  width: 28px;
+  min-width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 1px solid var(--border-color2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input-dropdown-toggle .text-box .title {
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: rgb(var(--heading-color));
+}
+.input-dropdown-toggle .text-box .sub-title {
+  font-size: 13px;
+  text-transform: capitalize;
+}
+
+.calculator-modal-logo {
+  max-width: 150px;
+}
+
+.swap-area {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin: 15px 40px -13px 0;
+}
+
+.swap-area .swap-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgb(var(--bg-color3));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.swap-area .swap-icon:hover i {
+  transform: scale(1.2) rotate(5deg);
+  color: rgb(var(--primary-color));
+}
+
+.transaction-summery {
+  margin-top: 30px;
+  padding: 20px;
+  background-color: rgb(var(--bg-color3));
+  border-radius: 10px;
+}
+
+.calculator-sidebar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  transition: var(--transition);
+  width: 320px;
+  z-index: 0;
+}
+.calculator-sidebar.active {
+  transform: none;
+}
+.calculator-sidebar.active::after {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  content: "";
+  background-color: rgb(var(--bg-color4), 0.9);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.calculator-sidebar .nav-item:not(:last-child) {
+  margin-bottom: 5px;
+}
+.calculator-sidebar .nav-link {
+  text-transform: capitalize;
+  color: rgb(var(--heading-color));
+  padding: 15px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+}
+.calculator-sidebar .nav-link.active, .calculator-sidebar .nav-link:hover {
+  background-color: rgb(var(--bg-color3));
+  color: rgb(var(--primary-color));
+}
+
+.calculator-sidebar-header {
+  padding: 15px 20px;
+  border-bottom: 1px solid var(--border-color1);
+}
+
+.calculator-sidebar-body {
+  padding: 20px;
+}
+
+.calculator-sidebar-inner {
+  background-color: rgb(var(--bg-color1));
+  height: 100%;
+  overflow: auto;
+}
+
+.currency-select-sidebar {
+  background-color: rgb(var(--bg-color1));
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  transform: translateY(100%);
+  transition: var(--transition);
+}
+.currency-select-sidebar.active {
+  transform: none;
+}
+
+.currency-select-sidebar-header {
+  padding: 15px 20px;
+  border-bottom: 1px solid var(--border-color1);
+}
+
 .cmn-btn-close {
   font-size: 18px;
   width: 40px;
@@ -800,13 +959,16 @@ body::-webkit-scrollbar-thumb:hover {
   opacity: 1;
   box-shadow: none;
   border-radius: 6px;
-  transition: var(--transition);
+  transition: background-color 0.3s ease-in-out;
   color: rgb(var(--body-color));
 }
-
 .cmn-btn-close:hover {
   background-color: rgb(var(--primary-color), 0.1);
   color: rgb(var(--primary-color));
+}
+.cmn-btn-close:focus {
+  border-color: rgb(var(--primary-color));
+  outline: 1px solid rgb(var(--primary-color)) !important;
 }
 
 .accordion-button {
@@ -1268,12 +1430,9 @@ Reusable style section start
   background-color: rgb(var(--bg-color1));
   border-radius: 4px;
   height: 50px;
-  border-radius: 9999px;
+  border-radius: 10px;
   padding: 6px 45px 6px 12px;
   box-shadow: var(--shadow1);
-}
-.search-box3 .form-control:focus {
-  outline: 1px solid rgb(var(--primary-color));
 }
 .search-box3 .search-btn {
   transition: var(--transition);
@@ -1765,7 +1924,7 @@ Offcanvas end
   gap: 5px;
   font-weight: 500;
   color: rgb(var(--heading-color));
-  border-radius: 9999px;
+  border-radius: 10px;
 }
 .social-btn:hover {
   color: rgb(var(--primary-color));
@@ -2572,16 +2731,16 @@ hr.divider:after {
 
 .cmn-list {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  -moz-column-gap: 15px;
-       column-gap: 15px;
-  row-gap: 5px;
+  flex-direction: column;
+  row-gap: 8px;
 }
 .cmn-list .item {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 5px;
+  color: rgb(var(--heading-color));
+  font-size: 14px;
 }
 
 .rtl .cmn-list .item:not(:last-child)::after {
@@ -4506,6 +4665,10 @@ end
 /*----------------------------------------------
 Padding top start
 ----------------------------------------------*/
+.pt-10 {
+  padding-top: 15px;
+}
+
 .pt-15 {
   padding-top: 15px;
 }
@@ -4685,6 +4848,10 @@ Padding bottom
 .navbar .navbar-toggler:hover {
   background-color: rgb(var(--primary-color), 0.1);
   color: rgb(var(--primary-color));
+}
+.navbar .navbar-toggler:focus {
+  border-color: rgb(var(--primary-color));
+  outline: 1px solid rgb(var(--primary-color));
 }
 .navbar .navbar-nav {
   text-align: center;
@@ -4874,6 +5041,7 @@ Hero section end
   overflow: hidden;
   border-radius: 10px 10px 0 0;
   padding: 26px 16px;
+  cursor: pointer;
   background: linear-gradient(271deg, #ebfedd 9.24%, rgba(238, 239, 255, 0) 49.61%, #cfccff 89.2%), #eef3ff;
 }
 
@@ -5575,7 +5743,7 @@ Newsletter end
   position: relative;
   z-index: 0;
   padding-bottom: 40px;
-  background-color: rgb(var(--bg-color3));
+  background-color: rgb(var(--bg-color4));
   color: rgb(var(--white), 0.9);
 }
 .footer-section .footer-widget .widget-title {
@@ -5686,12 +5854,12 @@ Copyright end
 ----------------------------------------------*/
 .banner-section {
   position: relative;
-  padding: 80px 0;
+  padding: 30px 0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 0;
-  background-color: var(--bg-color3);
+  background-color: rgb(var(--bg-color2));
 }
 .banner-section .img-box {
   max-width: 300px;
@@ -5740,22 +5908,12 @@ Copyright end
   color: rgb(var(--white));
 }
 
-@media (min-width: 768px) {
-  .banner-section .img-box {
-    margin-bottom: -50px;
-  }
-}
 @media (max-width: 991px) {
   .banner-section h3 {
     font-size: 36px;
   }
   .breadcrumb-area {
     font-size: 16px;
-  }
-}
-@media (max-width: 767px) {
-  .banner-section {
-    padding: 40px;
   }
 }
 @media (max-width: 575px) {
@@ -5775,9 +5933,6 @@ Banner end
   z-index: 0;
 }
 
-.contact-area {
-  padding: 20px;
-}
 .contact-area .thumbs-area {
   max-width: 250px;
   margin: auto;
@@ -5844,15 +5999,14 @@ Contact section end
   padding: 30px;
   z-index: 1;
   position: relative;
-  background-color: var(--bg-color2);
+  background-color: rgb(var(--bg-color1));
   border-radius: 20px;
+  border: 1px solid var(--border-color1);
+  box-shadow: var(--shadow1);
 }
 .login-register-form .logo-area {
   margin-bottom: 20px;
   display: inline-flex;
-}
-.login-register-form .cmn-btn {
-  height: 45px;
 }
 .login-register-form .cmn-btn2 {
   height: 45px;
